# pascal-voc-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pascal_voc_parser/: parser.py  parserv2.py  parserv3.py
tools/: _add_path.py  parse_example.py  rename.py  resize.py
